# anticodeguy-video-editing-studio

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  DESIGN.md  README.md  pyproject.toml
.claude/: settings.json  (+1 more)
graph/: .gitignore  README.md  config.yaml  langgraph.json  pyproject.toml  smoke_hom102.py  smoke_hom103.py  smoke_hom104.py  smoke_hom107.py  smoke_hom118.py  smoke_hom119.py  smoke_hom120.py  smoke_hom121.py  smoke_hom122.py  smoke_hom123.py  smoke_hom125.py  smoke_hom126.py  smoke_hom127.py  smoke_hom132_3_p3_cache.py  smoke_hom132_4_deterministic.py  smoke_hom132_5_e2e.py  smoke_hom134.py  smoke_hom140.py  smoke_hom141.py  smoke_hom147.py  smoke_hom148.py  smoke_hom149_cache_hit.py  smoke_hom149_sqlite_pair.py  smoke_hom150_p4_cache.py  smoke_hom94.py  smoke_test_v0.py  smoke_test_v1.py
graph/docs/: v0-smoke-test.md
graph/tests/: conftest.py  test_animation_map_gate.py  test_captions_track_gate.py  test_claude_backend.py  test_codex_backend.py  test_concurrency.py  test_config.py  test_design_adherence_gate.py  test_design_ok_gate.py  test_edl_failure_interrupt.py  test_edl_ok_gate.py  test_edl_schema.py  test_eval_ok_gate.py  test_failure_interrupt_resume.py  test_gate_retry_routing.py  test_glue_remap_transcript_node.py  test_halt_llm_boundary.py  test_hot_path_caching.py  test_inspect_gate.py  test_lint_gate.py  test_llm_cache_key_includes_config.py  test_llm_node.py  test_p3_inventory_node.py  test_p3_persist_session_node.py  test_p3_persist_session_routing.py  test_p3_pre_scan_node.py  test_p3_pre_scan_routing.py  test_p3_render_segments_node.py  test_p3_review_interrupt.py  test_p3_self_eval_routing.py  test_p3_strategy_node.py  test_p4_assemble_index_node.py  test_p4_beat.py  test_p4_catalog_scan_node.py  test_p4_design_system_node.py  test_p4_dispatch_beats.py  test_p4_persist_session_node.py  test_p4_persist_session_routing.py  test_p4_plan_node.py  (+18 more)
(+336 files in other folders)
