[project]
name = "anticodeguy-video-editing-studio"
version = "0.1.0"
description = "Orchestrator for video-use → hyperframes pipeline."
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
