[project]
name = "edit-episode-graph"
version = "0.0.1"
description = "LangGraph orchestrator for the anticodeguy video editing pipeline"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.2.60",
    "langgraph-checkpoint-sqlite>=2.0",
    "pydantic>=2.7",
    "jinja2>=3.1",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "langgraph-cli[inmem]>=0.1.55",
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/edit_episode_graph"]
