[project]
name = "edit-episode-graph"
version = "0.0.1"
description = "LangGraph orchestrator for the anticodeguy video editing pipeline"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.2.60",
    "langgraph-checkpoint-sqlite>=2.0",
    "pydantic>=2.7",
    "jinja2>=3.1",
    "pyyaml>=6.0",
    # Required by canon `timeline_view.py` invoked from p3_inventory (Step 1
    # sampling) and p3_self_eval (Step 7 per-cut sampling). Canon helpers
    # don't carry their own packaging — we install their deps in our venv
    # per CLAUDE.md "Skill copies: docs vs runnable".
    "numpy>=1.26",
    "pillow>=10.0",
]

[project.optional-dependencies]
dev = [
    "langgraph-cli[inmem]>=0.1.55",
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/edit_episode_graph"]
